--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -19,6 +19,13 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${DIST_DIR})
 
 
 #
+# ADD THIRD_PARTY
+# 
+
+add_subdirectory(third-party/json)
+
+
+#
 # ADD .cpp & .h
 # 
 
@@ -43,3 +50,4 @@ list(REMOVE_DUPLICATES INCLUDE_DIRS)
 
 add_executable(${PROJECT_NAME} ${SRC})
 target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} nlohmann_json::nlohmann_json)
