--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/third-party/json"]
 	path = app/third-party/json
 	url = git@github.com:nlohmann/json.git
+[submodule "app/third-party/termUi"]
+	path = app/third-party/termUi
+	url = git@github.com:tanguy-rdt/TermUi.git
