--- a/config/debian/config.json
+++ b/config/debian/config.json
@@ -1,5 +1,5 @@
 {
-    "Système": {
+    "SYSTEMS": {
         "Terminal": [
             {
                 "name": "terminator",
@@ -31,7 +31,7 @@
             ]
         }
     },
-    "Software": {
+    "SOFTWARE": {
         "IDE": [
             {
                 "name": "vscodium",
